--- a/ios/MyHomeWidget/Info.plist
+++ b/ios/MyHomeWidget/Info.plist
@@ -7,5 +7,7 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widgetkit-extension</string>
 	</dict>
+	<key>NSExtensionPrincipalClass</key>
+	<string>$(PRODUCT_MODULE_NAME).MyHomeWidgetBundle</string>
 </dict>
 </plist>
